SERVER-27358 Convert socket timeout to milliseconds to use in connect