src/mongo/util/net/sock.cpp
@@ -385,7 +385,7 @@ bool Socket::connect(SockAddr& remote) {
     }
 
     const Milliseconds connectTimeoutMillis(static_cast<int64_t>(
-        _timeout > 0 ? std::min(kMaxConnectTimeoutMS, _timeout) : kMaxConnectTimeoutMS));
+        _timeout > 0 ? std::min(kMaxConnectTimeoutMS, (_timeout * 1000)) : kMaxConnectTimeoutMS));
     const Date_t expiration = Date_t::now() + connectTimeoutMillis;
 
     bool connectSucceeded = ::connect(_fd, _remote.raw(), _remote.addressSize) == 0;
